--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ border-bottom: #1B53BA solid 3px ;
     background-image: url(/assets/background/boutique.png);
     background-size: repeat;
     background-color: aliceblue;
+    width: auto;
  }
 
  /* partie personnalisation */
@@ -80,9 +81,12 @@ border-bottom: #1B53BA solid 3px ;
     top: 190px;
     left: 330px;
     width: 360px;
+    max-width: 100%;
+    max-height: 100%;
     height: 300px; 
     object-fit: cover;
     border-radius: 100px;
     opacity: 95%;
   }
+
   
